Add possibility to upload new data on streamlit dashboard

--- a/P7_modeling.ipynb
+++ b/P7_modeling.ipynb
@@ -78,17 +78,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "49cc755f-6e37-4cdf-88ad-ea9a4d381577",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[WinError 182] Le système d’exploitation ne peut pas exécuter %1. Error loading \"C:\\Users\\robin\\anaconda3\\envs\\fastai\\lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13824\\4265195184.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\fastai\\lib\\site-packages\\torch\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    124\u001b[0m                 \u001b[0merr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWinError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlast_error\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    125\u001b[0m                 \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrerror\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34mf' Error loading \"{dll}\" or one of its dependencies.'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 126\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    127\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mres\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    128\u001b[0m                 \u001b[0mis_loaded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 182] Le système d’exploitation ne peut pas exécuter %1. Error loading \"C:\\Users\\robin\\anaconda3\\envs\\fastai\\lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies."
+     ]
+    }
+   ],
    "source": [
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "a30bce97",
    "metadata": {},
    "outputs": [],
@@ -4560,13 +4573,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "8841fb6b-07e1-4ff0-a315-90d256435bd2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing on full dataset\n",
-    "final_x, final_y = final_preprocessing()"
+    "initial_data = pd.read_csv('./Clean_datas/clean_data_1.csv', sep=\",\")\n",
+    "final_x, final_y, _ = final_preprocessing(initial_data, is_balance=True, existing_preprocessor=None)"
    ]
   },
   {
@@ -4786,14 +4800,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9bba2b0-8b1b-427c-83d7-57886a193b6e",
+   "metadata": {},
+   "source": [
+    "We will also save any object we may need for our API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
+   "id": "3de13153-89fd-4fbb-9103-bf9e825076d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First the imputer used during data cleaning which we will use for new datas\n",
+    "\n",
+    "from P7_functions_streamlit import *\n",
+    "\n",
+    "application_data = pd.read_csv('./Datas/application_train.csv', sep=',')\n",
+    "bureau = pd.read_csv('./Datas/bureau.csv', sep=',')\n",
+    "bureau_balance = pd.read_csv('./Datas/bureau_balance.csv', sep=',')\n",
+    "previous_application = pd.read_csv('./Datas/previous_application.csv', sep=',')\n",
+    "installments_payments = pd.read_csv('./Datas/installments_payments.csv', sep=',')\n",
+    "credit_card_balance = pd.read_csv('./Datas/credit_card_balance.csv', sep=',')\n",
+    "POS_CASH_balance = pd.read_csv('./Datas/POS_CASH_balance.csv', sep=',')\n",
+    "\n",
+    "merged_datas, imputer = preprocess_joint(\n",
+    "    application_data, bureau_balance, bureau, previous_application, credit_card_balance, POS_CASH_balance, installments_payments, imputer=None\n",
+    ")\n",
+    "\n",
+    "merged_datas.to_csv('./Clean_datas/merged_datas.csv')\n",
+    "pickle.dump(imputer, open('./Models/imputer.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f5ed7f8-3249-421d-80a9-8f92b5a09b24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Then the preprocessor using during preprocessing and matrices of real values\n",
+    "merged_datas = pd.read_csv('./Clean_datas/merged_datas.csv')\n",
+    "real_x, real_y, preprocessor = final_preprocessing(merged_datas, is_balance=False, is_existing_cols=False, existing_preprocessor=None)\n",
+    "\n",
+    "real_x.to_csv('./Clean_datas/real_x.csv')\n",
+    "real_y.to_csv('./Clean_datas/real_y.csv')\n",
+    "pickle.dump(preprocessor, open('./Models/preprocessor.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "40597726-060d-4b82-bc1d-36181f1ecf7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We also save descriptions to display it in our API\n",
-    "real_x, real_y = final_preprocessing_2()\n",
+    "# Finally descriptions of features to display it in our API\n",
     "descriptions_df = pd.DataFrame(real_x.columns, columns=['Variable'])\n",
     "descriptions_df['Var_Dataframe'] = descriptions_df['Variable'].apply(find_dataframe)\n",
     "descriptions_df['Var_Description'] = descriptions_df['Variable'].apply(find_description)\n",
