--- a/P7_modeling.ipynb
+++ b/P7_modeling.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "40275ca3",
    "metadata": {},
    "outputs": [],
@@ -78,30 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "49cc755f-6e37-4cdf-88ad-ea9a4d381577",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[WinError 182] Le système d’exploitation ne peut pas exécuter %1. Error loading \"C:\\Users\\robin\\anaconda3\\envs\\fastai\\lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13824\\4265195184.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\fastai\\lib\\site-packages\\torch\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    124\u001b[0m                 \u001b[0merr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWinError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlast_error\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    125\u001b[0m                 \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrerror\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34mf' Error loading \"{dll}\" or one of its dependencies.'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 126\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    127\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mres\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    128\u001b[0m                 \u001b[0mis_loaded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: [WinError 182] Le système d’exploitation ne peut pas exécuter %1. Error loading \"C:\\Users\\robin\\anaconda3\\envs\\fastai\\lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a30bce97",
    "metadata": {},
    "outputs": [],
@@ -119,7 +106,7 @@
     "\n",
     "import warnings\n",
     "from pandas.core.common import SettingWithCopyWarning\n",
-    "# warnings.simplefilter(action='ignore', category=SettingWithCopyWarning)\n",
+    "warnings.simplefilter(action='ignore', category=SettingWithCopyWarning)\n",
     "\n",
     "# Project specific functions\n",
     "from P7_functions import *\n",
@@ -167,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "e839d2b4",
    "metadata": {},
    "outputs": [],
@@ -181,18 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "74f2bf88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_data = pd.read_csv('./Clean_datas/baseline_data.csv', sep=\",\")\n",
+    "# baseline_data = pd.read_csv('./Clean_datas/baseline_data.csv', sep=\",\")\n",
     "data = pd.read_csv('./Clean_datas/clean_data_1.csv', sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "32fb710c",
    "metadata": {},
    "outputs": [
@@ -412,7 +399,7 @@
        "[5 rows x 402 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,30 +410,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "e16ce3c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "data.index = data['SK_ID_CURR']\n",
     "data.drop(['Unnamed: 0', 'SK_ID_CURR'], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "c44e65ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "y = data['TARGET']\n",
     "x = data.drop(['TARGET'], axis=1)\n",
-    "baseline_y = baseline_data['TARGET']\n",
-    "baseline_x = baseline_data.drop(['TARGET'], axis=1) # Note : categorical data already encoded"
+    "# baseline_y = baseline_data['TARGET']\n",
+    "# baseline_x = baseline_data.drop(['TARGET'], axis=1) # Note : categorical data already encoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "5b893e6d",
    "metadata": {},
    "outputs": [
@@ -466,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "6b4fa2af",
    "metadata": {},
    "outputs": [
@@ -478,7 +466,7 @@
        "Name: TARGET, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "50247db0",
    "metadata": {},
    "outputs": [
@@ -836,7 +824,7 @@
        "[8 rows x 362 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "id": "d5d1440c",
    "metadata": {},
    "outputs": [],
@@ -859,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "id": "4507f1ac",
    "metadata": {},
    "outputs": [
@@ -880,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "66d45e4a",
    "metadata": {},
    "outputs": [],
@@ -899,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "60cf4e9f",
    "metadata": {},
    "outputs": [],
@@ -910,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "id": "5f848ef7",
    "metadata": {},
    "outputs": [],
@@ -939,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "id": "3974310b",
    "metadata": {},
    "outputs": [],
@@ -967,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "id": "95f76a8c",
    "metadata": {},
    "outputs": [
@@ -978,7 +966,7 @@
       "Dimensions x_train before PCA reduction :  (246005, 670)\n",
       "Dimensions x_test before PCA reduction :  (61502, 670)\n",
       "\n",
-      "Proceed PCA on train and test set - done in 25s\n",
+      "Proceed PCA on train and test set - done in 24s\n",
       "Dimensions x_train after PCA reduction :  (246005, 289)\n",
       "Dimensions x_test after PCA reduction :  (61502, 289)\n"
      ]
@@ -1010,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "id": "2e115369",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "1c85896a",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1035,6 @@
    "cell_type": "markdown",
    "id": "71f302d2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1072,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 21,
    "id": "e841d3f4",
    "metadata": {},
    "outputs": [
@@ -1155,19 +1142,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>fit_time</th>\n",
-       "      <td>0.016626</td>\n",
-       "      <td>0.014415</td>\n",
-       "      <td>0.008039</td>\n",
-       "      <td>0.012216</td>\n",
-       "      <td>0.013446</td>\n",
+       "      <td>0.007722</td>\n",
+       "      <td>0.004984</td>\n",
+       "      <td>0.005570</td>\n",
+       "      <td>0.004943</td>\n",
+       "      <td>0.005752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>predict_time</th>\n",
-       "      <td>0.001482</td>\n",
-       "      <td>0.000999</td>\n",
-       "      <td>0.001896</td>\n",
-       "      <td>0.001412</td>\n",
-       "      <td>0.000870</td>\n",
+       "      <td>0.000764</td>\n",
+       "      <td>0.000347</td>\n",
+       "      <td>0.002790</td>\n",
+       "      <td>0.002309</td>\n",
+       "      <td>0.000410</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1181,11 +1168,11 @@
        "recall              0.000000  0.000000    0.079248   0.493777  0.000000\n",
        "roc_auc             0.500000  0.500000    0.499879   0.500000  0.500000\n",
        "cross_entropy       2.763748  2.763748    5.070557  17.256768  2.763748\n",
-       "fit_time            0.016626  0.014415    0.008039   0.012216  0.013446\n",
-       "predict_time        0.001482  0.000999    0.001896   0.001412  0.000870"
+       "fit_time            0.007722  0.004984    0.005570   0.004943  0.005752\n",
+       "predict_time        0.000764  0.000347    0.002790   0.002309  0.000410"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 22,
    "id": "9fcc7d87",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 23,
    "id": "34de6f4b",
    "metadata": {},
    "outputs": [
@@ -1307,19 +1294,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>fit_time</th>\n",
-       "      <td>0.006022</td>\n",
-       "      <td>0.001100</td>\n",
-       "      <td>0.000928</td>\n",
-       "      <td>0.001024</td>\n",
-       "      <td>0.001601</td>\n",
+       "      <td>0.001758</td>\n",
+       "      <td>0.000930</td>\n",
+       "      <td>0.000906</td>\n",
+       "      <td>0.000879</td>\n",
+       "      <td>0.000861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>predict_time</th>\n",
-       "      <td>0.001698</td>\n",
-       "      <td>0.000466</td>\n",
-       "      <td>0.001782</td>\n",
-       "      <td>0.000491</td>\n",
-       "      <td>0.000528</td>\n",
+       "      <td>0.000400</td>\n",
+       "      <td>0.000318</td>\n",
+       "      <td>0.001688</td>\n",
+       "      <td>0.000472</td>\n",
+       "      <td>0.000284</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1333,11 +1320,11 @@
        "recall              0.000000  0.000000    0.328677   0.493777  0.000000\n",
        "roc_auc             0.500000  0.500000    0.499461   0.500000  0.500000\n",
        "cross_entropy       2.763748  2.763748   12.333564  17.256768  2.763748\n",
-       "fit_time            0.006022  0.001100    0.000928   0.001024  0.001601\n",
-       "predict_time        0.001698  0.000466    0.001782   0.000491  0.000528"
+       "fit_time            0.001758  0.000930    0.000906   0.000879  0.000861\n",
+       "predict_time        0.000400  0.000318    0.001688   0.000472  0.000284"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 24,
    "id": "fa7f3c49",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1356,9 @@
   {
    "cell_type": "markdown",
    "id": "12559819",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## II - Quick testing <a class=\"anchor\" id=\"10-bullet\"></a>"
    ]
@@ -1786,7 +1775,6 @@
    "cell_type": "markdown",
    "id": "4fee51f6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1799,6 +1787,23 @@
    "metadata": {},
    "source": [
     "## I - Linear models <a class=\"anchor\" id=\"12-bullet\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c767c26a-9f7f-4743-aaad-985bea2603da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(random_state=random_state)\n",
+    "param_grid = {'C' : np.linspace(1, 10, num=4)}\n",
+    "\n",
+    "with timer(\"Proceed LogisticRegression\"):\n",
+    "    LogisticRegression_clf = run_GridSearchCV(model, x_train_pca, y_train, folds, \n",
+    "                                           param_grid, optimized_metric, balance_class=balance_class)"
    ]
   },
   {
@@ -3351,7 +3356,6 @@
    "cell_type": "markdown",
    "id": "4082fc28",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -4848,6 +4852,18 @@
     "real_x.to_csv('./Clean_datas/real_x.csv')\n",
     "real_y.to_csv('./Clean_datas/real_y.csv')\n",
     "pickle.dump(preprocessor, open('./Models/preprocessor.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "665b0f07-208e-41d4-84e8-f08f3acc28c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save explainer with all values\n",
+    "explainer = shap.LinearExplainer(selected_model, real_x)\n",
+    "pickle.dump(explainer, open('./Models/explainer.pkl', 'wb'))"
    ]
   },
   {
